fixing z-index for left focus indicator
bumped up so it appears above the border box shadows

--- a/packages/@react-spectrum/list/src/listview.css
+++ b/packages/@react-spectrum/list/src/listview.css
@@ -150,7 +150,7 @@
       inset-block-end: 0;
       inset-inline-start: 0;
       width: var(--spectrum-selectlist-border-size-key-focus);
-      z-index: 3;
+      z-index: 4;
       background: var(--spectrum-selectlist-option-focus-indicator-color);
     }
   }
